--- a/index.html
+++ b/index.html
@@ -20,22 +20,40 @@
             <article class="aboutme">
                 <article class="myself">
                     <h3>About Me</h3>
-                    <p>Hi everyone I'm Harry,我出生在中国的首都北京，我是一个典型的80后。<br/>
-                    我小的时候和现在的孩子们比起来简直是两个世界，现在孩子们的娱乐项目基本上就是手机、平板、电脑，电视
-                    都已经没有人看了。<br/>我记得我第一次接触电脑是在99年，父母为了学习给我买了第一台电脑，然而我并没有用来学习而是用来
-                    娱乐和游戏了...哈哈哈！</p>
                     <p>
-                        <b>“谁不是用最好的青春去换最深的教训呢!”</b> <br/> 在经历了毕业、找工作、失业几个循环后才明白学习的重要性，
-                        学什么呢？思前想后选择了编程这条路，因为我有20多年的计算机基础！哈哈--游戏基础也算吧！！！
-                    </p>
+                        Hi everyone I'm Harry.<br/>由于疫情的原因可以让我有许多空闲时间来学习，
+                        我现在在一边学习英语，一边学习编程。<b>编程真的很有意思！</b>以至于让我废寝忘食，
+                        甚至半夜起来去完善一段编码。
                     <p>
-                        <b>编程！！！看来我选对了</b><br/>我第一次觉得学习是这么的有趣，以至于可以日思夜想去解决一个问题。
-                        我现在在一边学习英语，一边学习编程。
-                    </p>
-                    <p>最后告诉大家一个学习编程的好方法：<b>“复杂的事情反复做就会简单，简单的事情用心做就会成功!”</b></p>
+                    <p>学习编程的好方法：<b>“复杂的事情反复做就会简单，简单的事情用心做就会成功!”</b></p>
                 </article>
+                <section class="mepic">
+                    <img src="./me.JPG" alt="my photo">
+                </section>
+            </article>
+            <article class="photo">
                 <section>
-                    <img>
+                    <h3 id="win95">谁还记得win95的画面？<img src="./biao.png" alt=""></h3>
+                    <br/><br/>
+                    <img id="win95p" src="./win95.jpg" alt="photo of window95">
+                </section>
+                <section>
+                    <h3 id="game">我最爱的两款游戏</h3>
+                    <br/><br/>
+                    <div id="gamep">
+                    <img src="./dota2.png" alt="picture of dota2">
+                    <img src="./war3.jpg" alt="picture of moshou">
+                    </div>
+                </section>
+                <section>
+                    <h3 id="dog">我的宠物狗YoYo</h3>
+                    <br/><br/>
+                    <img id="dogp" src="./yoyo1.jpg" alt="my dog">
+                </section>
+                <section>
+                    <h3 id="moto">我的机车梦</h3>
+                    <br/><br/>
+                    <img id="motop" src="./harley.jpg" alt="harley moto">
                 </section>
             </article>
         </main>
