--- a/index.html
+++ b/index.html
@@ -32,29 +32,72 @@
                 </section>
             </article>
             <article class="photo">
+                <h3>PHOTO</h3>
                 <section>
-                    <h3 id="win95">谁还记得win95的画面？<img src="./biao.png" alt=""></h3>
-                    <br/><br/>
+                    <h3 id="win95"> > 谁还记得这个画面</h3>
+                    <br/>
                     <img id="win95p" src="./win95.jpg" alt="photo of window95">
                 </section>
                 <section>
-                    <h3 id="game">我最爱的两款游戏</h3>
-                    <br/><br/>
+                    <h3 id="game"> > 我最爱的两款游戏</h3>
+                    <br/>
                     <div id="gamep">
                     <img src="./dota2.png" alt="picture of dota2">
                     <img src="./war3.jpg" alt="picture of moshou">
                     </div>
                 </section>
                 <section>
-                    <h3 id="dog">我的宠物狗YoYo</h3>
-                    <br/><br/>
+                    <h3 id="dog"> > 我的宠物狗YoYo</h3>
+                    <br/>
                     <img id="dogp" src="./yoyo1.jpg" alt="my dog">
                 </section>
                 <section>
-                    <h3 id="moto">我的机车梦</h3>
-                    <br/><br/>
+                    <h3 id="moto"> > 我的机车梦</h3>
+                    <br/>
                     <img id="motop" src="./harley.jpg" alt="harley moto">
                 </section>
+            </article>
+            <article class="skill">
+                <h3>Skills</h3>
+                <section>
+                    <ul class="skls">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>Python</li>
+                    </ul>
+                </section>
+            </article>
+            <article id="collect">
+                <h3 id="coll"> > Collect</h3>
+                <div id="collp">
+                    <ul>
+                        <li><a class="button2" href="https://www.google.com/" target="_blank">谷歌</a></li>
+                        <li><a class="button2" href="https://zh.wikipedia.org/" target="_blank">维基百科</a></li>
+                        <li><a class="button2" href="https://www.codecademy.com/" target="_blank">CodecadeMy</a></li>
+                        <li><a class="button2" href="https://github.com/" target="_blank">GitHub</a></li>
+                        <li><a class="button2" href="https://developer.mozilla.org/zh-CN/" target="_blank">MDN资源库</a></li>
+                        <li><a class="button2" href="https://pixabay.com/zh/" target="_blank">素材</a></li>
+                        <li><a class="button2" href="https://www.youtube.com" target="_blank">油管</a></li>
+                        <li><a class="button2" href="https://color.cloudflare.design/" target="_blank">页面外观设计</a></li>
+                        <li><a class="button2" href="https://color.adobe.com/zh/create/color-accessibility" target="_blank">颜色搭配</a></li>
+                        <li><a class="button2" href="https://codepip.com/" target="_blank">编码游戏</a></li>
+                        <li><a class="button2" href="https://www.internetingishard.com/" target="_blank">编码辅助学习</a></li>
+                        <li><a class="button2" href="https://fonts.google.com/" target="_blank">谷歌字体</a></li>
+                        <li><a class="button2" href="https://whatwg.org/" target="_blank">Whatwg</a></li>
+                        <li><a class="button2" href="https://www.smashingmagazine.com/" target="_blank">Web论坛</a></li>
+                        <li><a class="button2" href="https://www.taniarascia.com/projects" target="_blank">Taniarascia</a></li>
+                        <li><a class="button2" href="https://stackoverflow.com/" target="_blank">StackOverFlow</a></li>
+                        <li><a class="button2" href="https://unsplash.com/t/nature" target="_blank">图片素材</a></li>
+                        <li><a class="button2" href="https://harry403188.invisionapp.com/docs/freehands" target="_blank">网页草稿</a></li>
+                        <li><a class="button2" href="https://www.digitalocean.com/community" target="_blank">学术文章一</a></li>
+                        <li><a class="button2" href="https://thoughtbot.com/blog" target="_blank">学术文章二</a></li>
+                        <li><a class="button2" href="https://thoughtbot.com/blog/transitions-and-transforms" target="_blank">CSS过渡变换</a></li>
+                        <li><a class="button2" href="https://thoughtbot.com/blog/css-animation-for-beginners" target="_blank">CSS动画制作</a></li>
+                    </ul>
+                </div>
             </article>
         </main>
     </body>
