--- a/index.html
+++ b/index.html
@@ -100,5 +100,8 @@
                 </div>
             </article>
         </main>
+        <footer>
+            <p>My Email: greatd24@icloud.com</p>
+        </footer>
     </body>
 </html>
