--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
         <header>
             <h3>Harry-Deng</h3>
             <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Photo</a></li>
-                <li><a href="#">Skill</a></li>
-                <li><a href="#">Collect</a></li>
+                <li><a href="#abme">About Me</a></li>
+                <li><a href="#pho">Photo</a></li>
+                <li><a href="#skil">Skill</a></li>
+                <li><a href="#coll">Collect</a></li>
                 <li><button id="light">NO/OFF</button></li>
             </ul>
         </header>
         <main>
             <article class="aboutme">
                 <article class="myself">
-                    <h3>About Me</h3>
+                    <h3 id="abme">About Me</h3>
                     <p>
                         Hi everyone I'm Harry.<br/>由于疫情的原因可以让我有许多空闲时间来学习，
                         我现在在一边学习英语，一边学习编程。<b>编程真的很有意思！</b>以至于让我废寝忘食，
@@ -33,7 +33,7 @@
                 </section>
             </article>
             <article class="photo">
-                <h3>PHOTO</h3>
+                <h3 id="pho">PHOTO</h3>
                 <section>
                     <h3 id="win95"> > 谁还记得这个画面</h3>
                     <br/>
@@ -59,7 +59,7 @@
                 </section>
             </article>
             <article class="skill">
-                <h3>Skills</h3>
+                <h3 id="skil">Skills</h3>
                 <section>
                     <ul class="skls">
                         <li>HTML</li>
