--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                         <li><a class="button2" href="https://www.digitalocean.com/community" target="_blank">学术文章一</a></li>
                         <li><a class="button2" href="https://thoughtbot.com/blog" target="_blank">学术文章二</a></li>
                         <li><a class="button2" href="https://thoughtbot.com/blog/transitions-and-transforms" target="_blank">CSS过渡变换</a></li>
-                        <li><a class="button2" href="https://thoughtbot.com/blog/css-animation-for-beginners" target="_blank">CSS动画制作</a></li>
+                        <li><a class="button2" href="https://thoughtbot.com/blog/css-animation-for-beginners" target="_blank">CSS动画制作</a></li>                      
+                        <li><a class="button2" href="https://www.freecodecamp.org/learn" target="_blank">学习用1</a></li>
+                        <li><a class="button2" href="https://www.codewars.com/dashboard" target="_blank">学习用2</a></li>
                     </ul>
                 </div>
             </article>
