--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         <li><a class="button2" href="https://thoughtbot.com/blog/css-animation-for-beginners" target="_blank">CSS动画制作</a></li>                      
                         <li><a class="button2" href="https://www.freecodecamp.org/learn" target="_blank">学习用1</a></li>
                         <li><a class="button2" href="https://www.codewars.com/dashboard" target="_blank">学习用2</a></li>
+                        <li><a class="button2" href="https://hackernoon.com/" target="_blank">学习用3</a></li>
                     </ul>
                 </div>
             </article>
