--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                         <li><a class="button2" href="https://www.freecodecamp.org/learn" target="_blank">学习用1</a></li>
                         <li><a class="button2" href="https://www.codewars.com/dashboard" target="_blank">学习用2</a></li>
                         <li><a class="button2" href="https://hackernoon.com/" target="_blank">学习用3</a></li>
+                        <li><a class="button2" href="https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/#The_browsers_we_will_talk_about" target="_blank">浏览器工作原理</a></li>
                     </ul>
                 </div>
             </article>
