--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <li><a class="button2" href="https://www.html5rocks.com/zh/tutorials/internals/howbrowserswork/#The_browsers_we_will_talk_about" target="_blank">浏览器工作原理</a></li>
                         <li><a class="button2" href="https://roadmap.sh/frontend" target="_blank">前端学习路线图</a></li>
                         <li><a class="button2" href="https://jquery.com/" target="_blank">jQuery学习</a></li>
+                        <li><a class="button2" href="http://jqapi.com/" target="_blank">jQuery文档</a></li>
                     </ul>
                 </div>
             </article>
