--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                         <li><a class="button2" href="https://roadmap.sh/frontend" target="_blank">前端学习路线图</a></li>
                         <li><a class="button2" href="https://jquery.com/" target="_blank">jQuery学习</a></li>
                         <li><a class="button2" href="http://jqapi.com/" target="_blank">jQuery文档</a></li>
+                        <li><a class="button2" href="https://vuejs.org/" target="_blank">VUE</a></li>
                     </ul>
                 </div>
             </article>
