--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                         <li><a class="button2" href="https://jquery.com/" target="_blank">jQuery学习</a></li>
                         <li><a class="button2" href="http://jqapi.com/" target="_blank">jQuery文档</a></li>
                         <li><a class="button2" href="https://vuejs.org/" target="_blank">VUE</a></li>
+                        <li><a class="button2" href="https://www.gutenberg.org/" target="_blank">免费图书</a></li>
                     </ul>
                 </div>
             </article>
